[RD-1620]: delete margin to fix white space btwn footer & main (backgroundcolor)

--- a/assets/css/imports/layout.css
+++ b/assets/css/imports/layout.css
@@ -5,10 +5,6 @@ body {
   flex-direction: column;
 }
 
-footer {
-  margin-top: auto;
-}
-
 .page-container {
   max-width: 1200px;
   width: 100%;
@@ -24,7 +20,7 @@ footer {
 
 .dashboard-header {
   background-color: #fff;
-  filter: drop-shadow(0 1px 3px rgba(0, 0, 18, .16));
+  filter: drop-shadow(0 1px 3px rgba(0, 0, 18, 0.16));
 }
 
 .dashboard-header .dashboard-header__container {
@@ -71,7 +67,7 @@ footer {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 300px auto;
-  grid-template-areas: 'nav content';
+  grid-template-areas: "nav content";
 }
 
 @media (max-width: 62em) {
@@ -81,13 +77,12 @@ footer {
 }
 
 @media all and (max-width: 768px) {
-
   .dashboard-container {
     grid-template-columns: 100%;
     grid-template-areas:
-                'head'
-                'nav'
-                'content';
+      "head"
+      "nav"
+      "content";
   }
 
   .dashboard-container .dashboard-content {
